@@ -658,6 +658,24 @@ class TestDownloadFileView(unittest.TestCase):
                           'attachment; filename=thefilename'))
         self.assertEqual(response.app_iter, blobfile)
 
+    def test_save_filename_has_tabs_and_newlines(self):
+        context = testing.DummyModel()
+        blobfile = DummyBlobFile()
+        context.blobfile = blobfile
+        context.mimetype = 'x/foo'
+        context.filename = 'the\nfile\tname'
+        context.size = 42
+        request = testing.DummyRequest(params=dict(save=1))
+        response = self._callFUT(context, request)
+        self.assertEqual(response.headerlist[0],
+                         ('Content-Type', 'x/foo'))
+        self.assertEqual(response.headerlist[1],
+                         ('Content-Length', '42'))
+        self.assertEqual(response.headerlist[2],
+                         ('Content-Disposition',
+                          'attachment; filename=the file name'))
+        self.assertEqual(response.app_iter, blobfile)
+
 class TestThumbnailView(unittest.TestCase):
     def setUp(self):
         cleanUp()
